--- a/extra-tests/classes/RollupRelationshipFieldFinderTests.cls
+++ b/extra-tests/classes/RollupRelationshipFieldFinderTests.cls
@@ -1,6 +1,7 @@
 @IsTest
 private class RollupRelationshipFieldFinderTests {
-  static RollupControl__mdt control = new RollupControl__mdt(MaxLookupRowsBeforeBatching__c = 10000);
+  static final RollupControl__mdt control = new RollupControl__mdt(MaxLookupRowsBeforeBatching__c = 10000);
+  static final Set<String> uniqueFieldNames = new Set<String>{ 'Id', 'Name' };
 
   @TestSetup
   static void setup() {
@@ -14,7 +15,6 @@ private class RollupRelationshipFieldFinderTests {
     ContactPointAddress cpa = new ContactPointAddress(ParentId = parent.Id, Name = 'Child cpa');
     insert cpa;
 
-    Set<String> uniqueFieldNames = new Set<String>{ 'Name', 'Id' };
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
       new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Parent.Name'),
@@ -54,8 +54,8 @@ private class RollupRelationshipFieldFinderTests {
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
       new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Parent.Owner.Name'),
-      new Set<String>{ 'Name', 'Id' },
-      new Set<String>{ 'Name', 'Id' },
+      uniqueFieldNames,
+      uniqueFieldNames,
       User.SObjectType,
       new Map<Id, SObject>()
     );
@@ -76,8 +76,8 @@ private class RollupRelationshipFieldFinderTests {
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
       new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Parent.Owner.Name'),
-      new Set<String>{ 'Name', 'Id' },
-      new Set<String>{ 'Name', 'Id' },
+      uniqueFieldNames,
+      uniqueFieldNames,
       User.SObjectType,
       new Map<Id, SObject>()
     );
@@ -112,7 +112,6 @@ private class RollupRelationshipFieldFinderTests {
 
     Map<Id, SObject> oldCpas = new Map<Id, ContactPointAddress>{ cpa.Id => new ContactPointAddress(Id = cpa.Id, ParentId = intermediateOne.Id) };
 
-    Set<String> uniqueFieldNames = new Set<String>{ 'Name', 'Id' };
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
       new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Account.Owner.Name'),
@@ -149,7 +148,6 @@ private class RollupRelationshipFieldFinderTests {
 
     Map<Id, SObject> oldOpps = new Map<Id, ContactPointAddress>{ cpa.Id => new ContactPointAddress(Id = cpa.Id, ParentId = null) };
 
-    Set<String> uniqueFieldNames = new Set<String>{ 'Id', 'Name' };
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
       new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Parent.Owner.Name'),
@@ -192,8 +190,8 @@ private class RollupRelationshipFieldFinderTests {
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
       new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Name'),
-      new Set<String>{ 'Name', 'Id' },
-      new Set<String>{ 'Name', 'Id' },
+      uniqueFieldNames,
+      uniqueFieldNames,
       Account.SObjectType,
       oldCpas
     );
@@ -215,8 +213,8 @@ private class RollupRelationshipFieldFinderTests {
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
       new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Name'),
-      new Set<String>{ 'Name', 'Id' },
-      new Set<String>{ 'Name', 'Id' },
+      uniqueFieldNames,
+      uniqueFieldNames,
       Account.SObjectType,
       new Map<Id, SObject>()
     );
@@ -254,8 +252,8 @@ private class RollupRelationshipFieldFinderTests {
           parentTwo.Name +
           '\''
       ),
-      new Set<String>{ 'Name', 'Id' },
-      new Set<String>{ 'Name', 'Id' },
+      uniqueFieldNames,
+      uniqueFieldNames,
       Account.SObjectType,
       new Map<Id, SObject>()
     );
@@ -303,8 +301,8 @@ private class RollupRelationshipFieldFinderTests {
         GrandparentRelationshipFieldPath__c = 'Parent.Name',
         LookupFieldOnCalcItem__c = 'ParentId'
       ),
-      new Set<String>{ 'Name', 'Id' },
-      new Set<String>{ 'Name', 'Id' },
+      uniqueFieldNames,
+      uniqueFieldNames,
       Account.SObjectType,
       new Map<Id, SObject>()
     );
@@ -328,8 +326,8 @@ private class RollupRelationshipFieldFinderTests {
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
       new Rollup__mdt(RollupToUltimateParent__c = true, UltimateParentLookup__c = 'ParentId', LookupFieldOnCalcItem__c = 'AccountId'),
-      new Set<String>{ 'Name', 'Id' },
-      new Set<String>{ 'Name', 'Id' },
+      uniqueFieldNames,
+      uniqueFieldNames,
       Account.SObjectType,
       new Map<Id, SObject>()
     );
@@ -346,8 +344,8 @@ private class RollupRelationshipFieldFinderTests {
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
       new Rollup__mdt(RollupToUltimateParent__c = true, UltimateParentLookup__c = 'ParentId', LookupFieldOnCalcItem__c = 'ParentId'),
-      new Set<String>{ 'Name', 'Id' },
-      new Set<String>{ 'Name', 'Id' },
+      uniqueFieldNames,
+      uniqueFieldNames,
       Account.SObjectType,
       new Map<Id, SObject>()
     );
@@ -372,8 +370,8 @@ private class RollupRelationshipFieldFinderTests {
         LookupFieldOnCalcItem__c = 'AccountId',
         GrandparentRelationshipFieldPath__c = 'Account.Parent.Name'
       ),
-      new Set<String>{ 'Name', 'Id' },
-      new Set<String>{ 'Name', 'Id' },
+      uniqueFieldNames,
+      uniqueFieldNames,
       Account.SObjectType,
       new Map<Id, SObject>()
     );
@@ -401,8 +399,8 @@ private class RollupRelationshipFieldFinderTests {
         GrandparentRelationshipFieldPath__c = 'Contacts.Individual.Name',
         OneToManyGrandparentFields__c = 'Contact.AccountId'
       ),
-      new Set<String>{ 'Name', 'Id' },
-      new Set<String>{ 'Name', 'Id' },
+      uniqueFieldNames,
+      uniqueFieldNames,
       Individual.SObjectType,
       new Map<Id, SObject>()
     );
